# ghaf-givc

crates/admin/: Cargo.toml
crates/admin/src/admin/: handlers.rs  logs.rs  mod.rs  rules.rs  server.rs
crates/admin/src/admin/sigma_rules/rules/network/zeek/: zeek_rdp_public_listener.yml
crates/admin/src/admin/sigma_rules/rules/nix/: nix_service.yml  test_rule.yml
crates/admin/src/admin/sigma_rules/rules/nix/nix_store/: nix_store_modification.yml
nixos/modules/: admin.nix
