[package]
authors = ["Alexander Nikolaev <alexander.nikolaev@unikie.com>"]
edition = "2021"
license = "Apache 2.0"
name = "givc"
publish = false
version = "0.0.1"

[dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
async-stream = "0.3"
axum = "0.7"
clap = { version = "4.5.4", features = ["derive", "env"] }
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1.0", features = ["full"] }
prost = "0.13"
regex = "1.11"
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde_json = "1.0.120"
serde = { version = "1.0.202", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
systemd = "0.10"
tokio = { version = "1.44", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "fs",
  "process",
  "io-util",
  "full",
] }
tokio-stream = "0.1"
tokio-vsock = "0.7"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
async-tungstenite = { version = "0.23", features = ["tokio-runtime"] }
tonic-reflection = "0.13"
tonic-types = "0.13"
tonic = { version = "0.13", features = ["tls-ring"] }
tower = "0.5"
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "tracing-log",
  "time",
  "local-time",
] }
url = "2"
http = "0.2"
log = "0.4"
urlencoding = "2.1"
x509-parser = "0.17"
futures-util = "0.3"

# GIVC subparts
givc-common = { path = "../common" }
givc-client = { path = "../client" }

[dependencies.tokio-listener]
features = ["multi-listener", "vsock", "tonic013"]
git = "https://github.com/slakkala/tokio-listener"
branch = "tonic013"
